# SupernovaeDataFrame

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  supernovae_dataframe.py
cosmoexp/: __init__.py  cosmoexp.py
